fix: z-index

--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -2,7 +2,7 @@
   padding: 5px 0;
   background: #262626;
   position: relative;
-  z-index: 1111;
+  z-index: 1211;
   box-shadow: 0 0 2px #000;
 }
 
