--- a/src/theme.less
+++ b/src/theme.less
@@ -44,7 +44,7 @@
 }
 
 .cdk-overlay-container {
-  z-index: 1200;
+  z-index: 1300;
 }
 
 .ant-message-notice {
